# EdgeDetectionViewer-

./: .gitignore  README.md
app/: build.gradle
app/src/main/java/com/example/edgedetectionviewer/: MainActivity.kt  WebSocketServer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
gl/src/main/java/com/example/edgedetectionviewer/: GLSurfaceView.kt
gl/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
jni/src/main/cpp/: CMakeLists.txt  edge_detection.cpp
web/: index.html  package-lock.json  package.json  webpack.config.js
web/src/: edge-viewer.ts  index.html  index.ts
